# Kahoot-rafael

./: .gitignore  411_our_api.md  DOCKER.md  README.md  devlog.txt  docker-compose.yml  package-lock.json  requirements.txt  test-docker.sh  test.js
kahoot-clone-backend/: .dockerignore  Cargo.toml  Dockerfile
kahoot-clone-backend/src/: ext.rs  main.rs
kahoot-clone-backend/src/ws/: api.rs  mod.rs  state.rs
kahoot-clone-frontend/: .dockerignore  Dockerfile  kahoot.d.ts  next.config.js  package-lock.json  package.json  test.tsx  tsconfig.json
kahoot-clone-frontend/Components/: Editor.tsx  GameButton.tsx  Header.tsx  Options.tsx  Questions.tsx
kahoot-clone-frontend/lib/: postData.ts  useSSRUser.tsx  useUser.tsx
kahoot-clone-frontend/pages/: _app.tsx  create.tsx  host.tsx  index.tsx  play.tsx  profile.tsx
kahoot-clone-frontend/pages/api/: create.tsx  deleteOneGame.ts  getGames.ts  getOneGame.ts  login.ts  signout.ts  signup.ts  user.ts
kahoot-clone-frontend/pages/auth/: login.tsx  signup.tsx
kahoot-clone-frontend/serverless/: mongoCache.ts
kahoot-clone-frontend/styles/: DisplayQuestion.module.css  Editor.module.css  GameButton.module.css  Header.module.css  Options.module.css  Play.module.css  Questions.module.css  create.module.css  globals.css  host.module.css  index.module.css  profile.module.css  signup.module.css  signupnew.module.css
other/: index.html
pages/: host.html  host.js  play.html  play.js
